--- a/clusters/flux-poc/podinfo-helm-release.yaml
+++ b/clusters/flux-poc/podinfo-helm-release.yaml
@@ -1,27 +1,14 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: default
+  namespace: podinfo
 spec:
+  interval: 5m
   releaseName: podinfo
   chart:
-    repository: https://stefanprodan.github.io/podinfo
-    name: podinfo
-    version: 5.1.0
-  values:
-    # Specify your custom values for the Helm chart
-    applicationName: "podinfo"
-    service:
-      annotations: {}
-      name: podinfo
-      type: ClusterIP
-      port: 9898
-    replicaCount: 1
-    resources:
-      limits:
-        cpu: "100m"
-        memory: "128Mi"
-      requests:
-        cpu: "50m"
-        memory: "64Mi"
+    spec:
+      chart: podinfo
+      sourceRef:
+        kind: HelmRepository
+        name: podinfo
