--- a/clusters/flux-poc/helm-source.yaml
+++ b/clusters/flux-poc/helm-source.yaml
@@ -5,6 +5,5 @@ metadata:
   name: podinfo
   namespace: flux-system
 spec:
-  interval: 1m0s
-  type: oci
-  url: oci://ghcr.io/stefanprodan/charts/podinfo
+  interval: 10m0s
+  url: https://stefanprodan.github.io/podinfo
