change helm release namespace

--- a/clusters/flux-poc/helm-source.yaml
+++ b/clusters/flux-poc/helm-source.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: podinfo
-  namespace: flux-system
+  namespace: podinfo-helm
 spec:
   interval: 10m0s
   url: https://stefanprodan.github.io/podinfo
