--- a/clusters/flux-poc/helm-release.yaml
+++ b/clusters/flux-poc/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: flux-system
+  namespace: podinfo-helm
 spec:
   chart:
     spec:
